<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StringResourcePractice1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- TODO: 実習1: ここから下に、日本語の String リソースを作る -->
    <string name="example_1">例1</string>
    <string name="example_2">例2</string>
    <string name="example_3">例3</string>
    <string name="example_4">例4</string>
    <string name="example_5">例5</string>
    <!-- TODO: 実習2: 日本語の String リソースに対応する英語リソースを作る -->

</resources>